Fixes Project Cards text overlapping

--- a/src/App.css
+++ b/src/App.css
@@ -224,9 +224,18 @@ img {
 
 .ProjectCards p{
     font-family: Roboto;
-    font-size: 20px;
-    padding: 25px;
+    /* overflow-wrap: break-word; */
+    font-size: 3vw;
+    padding: 10px;
+    margin:0px
 }
+
+@media (min-width: 645px) {
+    .ProjectCards p {
+        font-size: 15px;
+    }
+  }
+
 .ProjectCardContainer{
     padding: 2px 16px;
 }
